--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ header.main-header {
 }
 .logo {
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 .logo img {
@@ -24,13 +23,13 @@ header.main-header {
     display: flex;
 }
 .title {
-    margin-top: 4%;
+    margin-right: 1%;
 }
 .title-logo {
     background-color: #fff;
     padding: 4px 20px 7px 5px;
     border-radius: 40px/35px;
-    width: 48%;
+    width: auto;
     z-index: 11;
 }
 .title-logo a {
@@ -54,11 +53,12 @@ span.title-info {
 }
 .social {
     background: #575757;
-    width: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 30px 0 0 30px;
+    padding-right: 17px;
+    padding-left: 5px;
     margin-right: -17px;
     z-index: 10;
 }
@@ -75,7 +75,7 @@ span.title-info {
 }
 .hadis {
     color: #fff;
-    font-size: 15px;
+    font-size: 0.80rem;
     font-family: tanha;
     margin-top: 5px;
 }
