--- a/style.css
+++ b/style.css
@@ -124,3 +124,23 @@ input.search-header {
     align-items: center;
     justify-content: center;
 }
+.log-icon {
+    display: flex;
+    justify-content: flex-end;
+    margin: 12px 0 0 25px;
+}
+.log-icon .iconify {
+    width: 50px;
+    height: 50px;
+    color: #9a9a9a;
+}
+.log-icon .iconify:hover{
+    color: #fff;
+}
+.log-icon button {
+    border: none;
+    background: none;
+}
+.log-icon button:focus{
+    border: none;
+}
