--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header.main-header {
 
 }
 .logo img {
-    width: 100%;
+    width: 9.37rem;
     border-radius: 15%;
     margin: 10px 0;
     box-shadow: 0 0 7px #ffffff3d;
