--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-
-body{
-        direction: rtl;
+body {
+    direction: rtl;
 
     color: #efefef;
 }
+
 .main-header {
     background: #454545;
     min-height: 15rem;
@@ -15,15 +15,19 @@ body{
     margin: 13px 21px 0 0;
     box-shadow: 0 0 7px #ffffff3d;
 }
+
 .logo-mobi img {
     width: 100%;
     height: 80%;
 }
+
 .name-logo {
     margin-top: 4%;
     text-align: justify;
 }
-.name-logo .title , .name-logo .hadis{
+
+.name-logo .title,
+.name-logo .hadis {
     margin-top: 5px;
 }
 
@@ -35,11 +39,13 @@ body{
     width: auto;
     z-index: 11;
 }
+
 .title-logo a {
     color: #6c6c6c;
     font: 1.35rem tanha;
     font-weight: bold;
 }
+
 .title-logo span {
     font: 0.7rem tahoma;
     color: #fff;
@@ -49,12 +55,14 @@ body{
     display: inline-block;
     border-radius: 40px/35px;
 }
+
 .title-info {
     color: #9f9f9f;
     font-size: 1.3rem;
     font-family: 'Tabassom';
     padding-right: 5px;
 }
+
 .social {
     background: #575757;
     border-radius: 30px 0 0 30px;
@@ -63,41 +71,50 @@ body{
     margin-right: -17px;
     z-index: 10;
 }
+
 .social a {
     margin: 0 5px 0 5px;
 }
+
 .social a svg.iconify:hover {
     color: #d9d9d9;
 }
+
 .social a svg.iconify {
     width: 30px;
     height: 30px;
     color: #818181;
 }
+
 .hadis {
     color: #fff;
     font-size: 0.75rem;
     font-family: tanha;
 }
+
 .hadis span svg {
     margin-left: -7px;
     width: 23px;
     height: 23px;
 }
+
 nav.nav-top-menu ul {
     display: flex;
     text-decoration: none;
     list-style-type: none;
 }
-nav.nav-top-menu ul li:nth-last-child(1) span{
+
+nav.nav-top-menu ul li:nth-last-child(1) span {
     display: none;
 }
+
 nav.nav-top-menu ul li a {
     color: #838383;
     font-family: yekan;
     font-size: 0.9rem;
 }
-nav.nav-top-menu ul li a span .iconify{
+
+nav.nav-top-menu ul li a span .iconify {
     width: 20px;
     height: 20px;
     color: #a7a7a7;
@@ -112,37 +129,46 @@ input.search-header {
     font-family: 'Tanha';
     font-size: 0.8rem;
 }
+
 .search-header button {
     width: 13%;
     border: none;
     background: #4e9e31;
     border-radius: 8px 0 0 8px;
 }
+
 .log-icon {
     margin: 12px 0 0 25px;
 }
+
 .log-icon .iconify {
     width: 50px;
     height: 50px;
     color: #9a9a9a;
-    
+
 }
-.log-icon .iconify:hover{
+
+.log-icon .iconify:hover {
     color: #fff;
 }
+
 .log-icon button {
     border: none;
     background: none;
 }
-.log-icon button:focus{
+
+.log-icon button:focus {
     border: none;
 }
+
 .top-menu {
     margin-top: 1rem;
 }
-.tooltip{
+
+.tooltip {
     font-family: tanha !important;
 }
+
 .main-menu-nav li a {
     margin-right: 1rem;
     padding: 0.5rem 1.6rem;
@@ -152,11 +178,20 @@ input.search-header {
     font-family: 'Tanha';
     font-size: 1rem;
 }
-.main-menu-nav li a:hover{
+
+.main-menu-nav li a:hover {
     background: #2bd66bcf;
     color: #ffffff;
     text-decoration: none;
 }
+
 .main-menu-nav li {
     margin-top: 1.7rem;
+}
+.modal-content{
+    font-family: tanha;
+}
+.modal-header{
+    color: #848484;
+    font-weight: bold;
 }
