--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
 body{
     direction: rtl;
+    background: #fafafa;
+}
+header{
+    top: 0;
+    background: #454545;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.21);
+}
+header .ex-name span{
+font-family: Tabassom;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 18px;
+display: flex;
+align-items: center;
+text-align: right;
+
+color: #E7E7E7;
+
+}
+.logo-social{
+    display: flex;
+    
 }
