--- a/style.css
+++ b/style.css
@@ -1606,7 +1606,6 @@ header{
 }
 
 .nav-menu-ir{
-    border-top: 1px solid rgba(41, 41, 41, 0.315);
     margin-top: 5px;
 
 }
@@ -1643,7 +1642,7 @@ text-align: center;
     border-radius: 0 30px 30px 0 !important;
 }
 .search-button{
-    width: 30%;
+    width: 28%;
     border-radius: 30px 0 0 30px !important;
     text-align: center;
     box-shadow: 0px 4px 8px 0px rgba(28, 37, 44, 0.08);
@@ -1651,16 +1650,40 @@ text-align: center;
 }
 .consultation-box{
     padding: 7px;
+    height: 50px;
     text-align: center;
     border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .consultation-box a{
     color: #fff;
+    text-align: center;
+
     font-family: tanha;
     font-size: 1rem;
     text-decoration: none;
 }
 .consultation-box  .number{
     font-family: yekan;
-    font-size: 1.2rem;
+    font-size: 1rem;
+}
+.button-login button {
+    padding: 10px;
+    box-shadow: 0px 10px 10px rgba(167, 139, 250, 0.28);
+}
+.button-login .iconify{
+    width: 30px;
+    height: 30px;
+    /* box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.25); */
+}
+.button-menu button {
+    padding: 10px;
+    box-shadow: 0px 10px 10px rgba(96, 165, 250, 0.28);
+}
+.button-menu .iconify{
+    width: 30px;
+    height: 30px;
+    /* box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.25); */
 }
