--- a/style.css
+++ b/style.css
@@ -1725,15 +1725,18 @@ text-align: center;
 
 .button-login button {
     padding: 10px !important;
-    box-shadow: 0px 10px 10px rgba(167, 139, 250, 0.28);
+    box-shadow: 0px 10px 10px rgba(8, 145, 178, 0.28);
 }
 .button-login .iconify{
     width: 30px;
     height: 30px;
     /* box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.25); */
 }
+.button-menu{
+    margin-right: 10px !important;
+}
 .button-menu button {
-    padding: 10px;
+    padding: 10px !important;
     box-shadow: 0px 10px 10px rgba(96, 165, 250, 0.28);
 }
 .button-menu .iconify{
