--- a/style.css
+++ b/style.css
@@ -1751,6 +1751,9 @@ text-align: center;
     padding: 8px !important;
     border-radius: 10px !important;
 }
+.modal-dialog{
+    margin: 1.75rem auto !important;
+}
 .modal-menu{
     width: 100%;
 }
@@ -1778,4 +1781,10 @@ text-align: center;
     font-weight: bold;
     margin-right: 5px !important;
     font-family: titr;
+}
+.modal-menu .modal-title{
+    font-family: 'Tanha';
+    font-size: larger;
+    font-weight: bold;
+    margin: 5px 28px !important;
 }
