--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
     margin: 0 !important;
     padding: 0 !important;
 }
-
+button:focus{
+    border: none !important;
+}
 
 
 body{
@@ -1851,7 +1853,7 @@ text-shadow: 0px 6px 6px rgba(0, 0, 0, 0.25);
     color: #0E7490;
 }
 .Buttons {
-    margin-top: 10px  !important;
+    margin-top: 15px  !important;
     display: flex;
     justify-content: space-around;
 
@@ -1869,13 +1871,10 @@ text-shadow: 0px 6px 6px rgba(0, 0, 0, 0.25);
 }
 .btn-sefaresh{
     box-shadow: 0px 10px 10px rgba(16, 185, 129, 0.28);
-border-radius: 50px;
 }
 .btn-moshavere{
     box-shadow: 0px 10px 10px rgba(139, 92, 246, 0.28);
-    border-radius: 50px;
 }
 .btn-etlaat{
     box-shadow: 0px 10px 10px rgba(244, 63, 94, 0.28);
-border-radius: 50px;
 }
