--- a/style.css
+++ b/style.css
@@ -1808,7 +1808,7 @@ text-align: center;
 .main-content{
     margin-top: 28% !important;
 }
-.titr-abote-design h3{
+.titr-abote-design-sm h3{
 width: 153px;
 height: 130px;
 font-family: vazir;
@@ -1819,14 +1819,14 @@ line-height: 1.6;
 display: flex;
 align-items: center;
 text-align: center;
-margin-right: 65px !important;
+margin-right: 15px !important;
 margin-top: 29px !important;
 /* true gray / 700 */
 
 color: #404040;
 text-shadow: 0px 6px 6px rgba(0, 0, 0, 0.25);
 }
-.pic-design-web img{
+.pic-design-web-sm img{
     width: 100%;
 }
 .bg-itm-menu-design {
@@ -1835,7 +1835,7 @@ text-shadow: 0px 6px 6px rgba(0, 0, 0, 0.25);
     background-size: 70%;
     position: relative;
 }
-.titr-abote-design span{
+.titr-abote-design-sm span{
     font-family: vazir;
 font-style: normal;
 font-weight: bold;
@@ -1844,14 +1844,14 @@ line-height: 25px;
 display: flex;
 align-items: center;
 text-align: center;
-margin-right: 96px !important;
+margin-right: 25px !important;
 margin-top: 29px !important;
 /* red / 500 */
 
 color: #EF4444;
 text-shadow: 0px 6px 6px rgba(0, 0, 0, 0.25);
 }
-.abote-design span.ekhtesasi{
+.abote-design-sm span.ekhtesasi-sm{
     font-family: vazir;
     font-style: normal;
     font-weight: bold;
