--- a/style.css
+++ b/style.css
@@ -1892,3 +1892,55 @@ text-shadow: 0px 6px 6px rgba(0, 0, 0, 0.25);
 .btn-etlaat{
     box-shadow: 0px 10px 10px rgba(244, 63, 94, 0.28);
 }
+
+/* Style Itm One Mine Menu For Tablet */
+.itm-main-md {
+    margin-top: -93px !important;
+}
+.pic-design-web-md img {
+    width: 100%;
+
+}
+.titr-abote-design-md h3 {
+    width: 190px;
+    font-family: 'Vazir';
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 43px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #404040;
+    border: 1px solid #FFFFFF;
+    text-shadow: 0px 6px 6px rgb(0 0 0 / 25%);
+    margin-right: 46px !important;
+}
+.titr-abote-design-md span {
+    width: 145px;
+    font-family: 'Vazir';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 35px;
+    line-height: 35px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #EF4444;
+    text-shadow: 0px 6px 6px rgb(0 0 0 / 25%);
+    margin-right: 33px !important;
+    margin-top: 65px !important;
+}
+.abote-design-md span {
+    width: 500px;
+    font-family: 'Vazir';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 25px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #0E7490;
+    margin-top: -35px !important;
+    margin-right: 10px !important;
+}
