--- a/style.Home.css
+++ b/style.Home.css
@@ -70,7 +70,7 @@ header.header-1 .lev-2row .nav-menu li{
 /*      style main> itm1 WEB DSIGN     */
 
 .itm1{
-    background: #fff url(image/bg-itm1.png) no-repeat 100%;
+    background: #fff url(image/bg-itm1.svg) no-repeat 100%;
     background-size: 101%;
     background-position: bottom;
     height: 730px;
@@ -149,4 +149,8 @@ header.header-1 .lev-2row .nav-menu li{
     color: #FFFFFF;
     text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.55);
     padding: 16px 25px;
+}
+.down-itm1{
+    margin-top: 90px;
+    margin-right: 260px;
 }
