--- a/style.Home.css
+++ b/style.Home.css
@@ -155,3 +155,54 @@ header.header-1 .lev-2row .nav-menu li{
     margin-top: 90px;
     margin-right: 260px;
 }
+.itm2{
+    background: #fff url(image/bg-itm2.svg) top;
+    background-size: 100%;
+    height: 500px;
+    margin-bottom: 100px
+}
+.box-services{
+    width: 249px;
+    height: 284px;
+    background: rgba(255, 255, 255, 0.97);
+    border-radius: 30px;margin-top: 130px;
+}
+.t-service{
+    width: 249px;
+    height: 33px;
+    font-family: Vazir;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 29px;
+    text-align: center;
+    color: #515151;
+
+}
+.pa-service{
+    width: 225px;
+    height: 47px;
+    font-family: Tanha;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 22px;
+    text-align: center;
+    color: #7A7A7A;
+}
+.img-ser-grafic{
+    width: 100%;
+    background: url(image/grafic-design.svg);
+}
+.img-ser-codeweb{
+    width: 100%;
+    background: url(image/code-web.svg);
+}
+.img-ser-posh{
+    width: 100%;
+    background: url(image/support.svg);
+}
+.img-ser-robot{
+    width: 100%;
+    background: url(image/robot-telegram.svg);
+}
