--- a/style.Home.css
+++ b/style.Home.css
@@ -158,14 +158,23 @@ header.header-1 .lev-2row .nav-menu li{
 .itm2{
     background: #fff url(image/bg-itm2.svg) top;
     background-size: 100%;
-    height: 500px;
-    margin-bottom: 100px
+    height: 491px;
+
 }
 .box-services{
     width: 249px;
     height: 284px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
     background: rgba(255, 255, 255, 0.97);
-    border-radius: 30px;margin-top: 130px;
+    border-radius: 30px;
+    margin-top: 95px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.37);
+    padding: 10px 0;
+    margin-right: 50px;
 }
 .t-service{
     width: 249px;
@@ -180,29 +189,43 @@ header.header-1 .lev-2row .nav-menu li{
 
 }
 .pa-service{
-    width: 225px;
+    width: 249px;
     height: 47px;
     font-family: Tanha;
-    font-style: normal;
-    font-weight: normal;
     font-size: 15px;
     line-height: 22px;
     text-align: center;
     color: #7A7A7A;
+    margin-top: 7px;
 }
 .img-ser-grafic{
     width: 100%;
-    background: url(image/grafic-design.svg);
+    height: 170px;
+    background: url(image/grafic-design.svg) no-repeat center;
 }
 .img-ser-codeweb{
     width: 100%;
-    background: url(image/code-web.svg);
+    height: 170px;
+    background: url(image/code-web.svg) no-repeat center;
+
 }
 .img-ser-posh{
     width: 100%;
-    background: url(image/support.svg);
+    height: 170px;
+    background: url(image/support.svg) no-repeat center;
+
 }
 .img-ser-robot{
     width: 100%;
-    background: url(image/robot-telegram.svg);
+    height: 170px;
+    background: url(image/robot-telegram.svg) no-repeat center;
+
+}
+.title-itm2{
+    font-family: Tanha;
+    font-size: 40px;
+    color: #FFFFFF;
+    text-shadow: 0px 2px 1px rgba(255, 255, 255, 0.22), 0px 4px 4px rgba(0, 0, 0, 0.14);
+    margin-right: 583px;
+    margin-top: 25px
 }
