--- a/css/style.Home.css
+++ b/css/style.Home.css
@@ -70,7 +70,7 @@ header.header-1 .lev-2row .nav-menu li{
 /*      style main> itm1 WEB DSIGN     */
 
 .itm1{
-    background: #fff url(image/bg-itm1.svg) no-repeat 100%;
+    background: #fff url(../image/bg-itm1.svg) no-repeat 100%;
     background-size: 101%;
     background-position: bottom;
     height: 730px;
@@ -156,7 +156,7 @@ header.header-1 .lev-2row .nav-menu li{
     margin-right: 260px;
 }
 .itm2{
-    background: #fff url(image/bg-itm2.svg) top right;
+    background: #fff url(../image/bg-itm2.svg) top right;
     background-size: 100%;
     height: 491px;
 
@@ -233,7 +233,7 @@ header.header-1 .lev-2row .nav-menu li{
 .for-constration{
     width: 1170px;
     height: 211px;
-    background: url(image/title-const.svg) no-repeat 60% 55%;
+    background: url(../image/title-const.svg) no-repeat 60% 55%;
     border: 3px solid #853167;
     box-sizing: border-box;
     box-shadow: 0px 6px 9px rgba(0, 0, 0, 0.18);
