--- a/css/style.Home.css
+++ b/css/style.Home.css
@@ -281,13 +281,12 @@ header.header-1 .lev-2row .nav-menu li{
 }
 .box-softwer{
     width: 300px;
-    height: 1006px;
     background: #FFFFFF;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.19);
     border-radius: 30px;
 }
 .t-softwer{
-    background: #853167;
+    background: #853167 url(../image/bg-t-softwere.svg);
     border-radius: 20px 20px 0 0;
 }
 .t-softwer h4{
@@ -343,4 +342,23 @@ a .p-soft :hover{
     text-align: center;
     color: #5E5E5E;
     text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.16);
+}
+.t-more-btn-softwere{
+    background: #853167;
+    text-align: center;
+    border-radius: 0 0 20px 20px;
+
+}
+.t-more-btn-softwere a{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    font-family: Tanha;
+    font-size: 25px;
+    line-height: 37px;
+    text-align: center;
+    color: #FFFFFF;
+    text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.26);
+    padding: 15px 0;
+    text-decoration: none;
 }
