--- a/css/style.Home.css
+++ b/css/style.Home.css
@@ -366,3 +366,53 @@ a.p-soft{
     padding: 15px 0;
     text-decoration: none;
 }
+.nav-menu-post{
+    background: #853167;
+    box-shadow: 0px 0px 22px rgba(133, 49, 103, 0.7);
+    border-radius: 20px 20px 37px 37px;
+    height: 160px;
+
+}
+.title-nav-menu{
+    width: 206px;
+    font-family: Vazir;
+    font-size: 30px;
+    text-align: center;
+    color: #FFFFFF;
+    padding: 22px 17px 0px 0;
+    width: 229px;
+
+}
+.nav-menu-post img{
+    float: left;
+    position: relative;
+    top: -30px;
+    margin-left: 15px;
+}
+.navmenu-item{
+    width: 889px;
+    height: 46px;
+    background: #FFFFFF;
+    box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.15), inset -2px -3px 5px rgba(0, 0, 0, 0.16), inset 4px 4px 5px rgba(0, 0, 0, 0.11);
+    border-radius: 37px;
+    margin: auto;
+    margin-top: 38px;
+}
+.navmenu-ul{
+    width: 100%;
+    height: 16px;
+    display: flex;
+    justify-content: center;
+}
+.navmenu-ul li:nth-child(1){
+    margin-right: 0 ;
+}
+.navmenu-ul li {
+    display: inline-block;
+    font-family: Vazir;
+    font-size: 16px;
+    line-height: 27px;
+    text-align: center;
+    color: #000000;
+    margin-right: 130px;
+}
